--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -20,7 +20,7 @@ const { title = 'SouqRS', description = 'High-performant e-commerce API' } = Ast
 		<!-- Service Worker -->
 		<script
 			type="module"
-			src="{Astro.resolve('../assets/js/pwaupdate.js')}"
+			src={Astro.resolve('../assets/js/pwaupdate.js')}
 		></script>
 	</head>
 	<body>
@@ -31,7 +31,7 @@ const { title = 'SouqRS', description = 'High-performant e-commerce API' } = Ast
 		<!-- Initialize Firebase -->
 		<script
 			type="module"
-			src="{Astro.resolve('../assets/js/firebase.js')}"
+			src={Astro.resolve('../assets/js/firebase.js')}
 		></script>
 
 		<!-- Initialize WebFonts -->
@@ -45,7 +45,7 @@ const { title = 'SouqRS', description = 'High-performant e-commerce API' } = Ast
 		</script>
 		<script
 			async
-			src="{Astro.resolve('../assets/js/webfontloader.js')}"
+			src={Astro.resolve('../assets/js/webfontloader.js')}
 		></script>
 	</body>
 </html>
