--- a/src/layouts/components/Links.astro
+++ b/src/layouts/components/Links.astro
@@ -16,5 +16,5 @@
 		href="https://fonts.googleapis.com/css?family=Fira+Sans:400&display=swap"
 	/>
 </noscript>
-<link rel="stylesheet" href="{Astro.resolve('../../assets/css/global.css')}" />
+<link rel="stylesheet" href={Astro.resolve('../../assets/css/global.css')} />
 <link rel="manifest" href="/site.webmanifest" crossorigin="use-credentials" />
