--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -13,7 +13,7 @@ const { title = 'SouqRS', description = 'High-performant e-commerce API' } = Ast
 			document.documentElement.classList.add("js");
 		</script>
 
-		<Meta title="{title}" description="{description}" />
+		<Meta title={title} description={description} />
 		<Links />
 		<Favicon />
 
