--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,7 +17,7 @@ const { title = 'SouqRS', description = 'High-performant e-commerce API' } = Ast
 		<Links />
 		<Favicon />
 	</head>
-	<body>
+	<body class="antialiased flex flex-grow">
 		<div id="souq-web" class="flex flex-grow">
 			<slot></slot>
 		</div>
