--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -24,8 +24,9 @@ const { title = 'SouqRS', description = 'High-performant e-commerce API' } = Ast
 
 		<!-- Initialize Firebase -->
 		<script
+			defer
 			type="module"
-			src={Astro.resolve('../assets/js/firebase.js')}
+			src={Astro.resolve('./../assets/js/firebase.js')}
 		></script>
 	</body>
 </html>
