Removes layout components

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,13 @@ import BaseLayout from '../layouts/BaseLayout.astro'
 </style>
 <BaseLayout>
 	<section
-		class="flex flex-col flex-grow h-screen items-center justify-center text-center"
+		class="
+			flex flex-col flex-grow
+			h-screen
+			items-center
+			justify-center
+			text-center
+		"
 	>
 		<a
 			class="text-2xl tracking-wider"
