--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
-const { title = 'SouqRS', description = 'High-performant e-commerce API' } = Astro.props;
+const { title = "SouqRS", description = "High-performant e-commerce API" } =
+	Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -28,8 +29,10 @@ const { title = 'SouqRS', description = 'High-performant e-commerce API' } = Ast
 		<meta name="twitter:dnt" content="on" />
 
 		<!-- Links -->
-		<link rel="stylesheet"
-		href={Astro.resolve('./../assets/css/global.css')} />
+		<link
+			rel="stylesheet"
+			href={Astro.resolve('./../assets/css/global.css')}
+		/>
 		<link
 			rel="manifest"
 			href="/site.webmanifest"
@@ -119,14 +122,13 @@ const { title = 'SouqRS', description = 'High-performant e-commerce API' } = Ast
 	</head>
 	<body class="antialiased flex flex-grow">
 		<div id="souq-web" class="flex flex-grow">
-			<slot></slot>
+			<slot />
 		</div>
 
 		<!-- Initialize Firebase -->
 		<script
 			defer
 			type="module"
-			src={Astro.resolve('./../assets/js/firebase.js')}
-		></script>
+			src={Astro.resolve('./../assets/js/firebase.js')}></script>
 	</body>
 </html>
