--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,13 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro'
+import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
-<style>
-	a {
-		color: #fab005;
-	}
-</style>
 <BaseLayout>
+	<style>
+		a {
+			color: #fab005;
+		}
+	</style>
 	<section
 		class="
 			flex flex-col flex-grow
@@ -21,8 +21,7 @@ import BaseLayout from '../layouts/BaseLayout.astro'
 			class="text-2xl tracking-wider"
 			href="mailto:hi@souq.dev"
 			rel="noopener noreferrer"
-			target="_blank"
-			>hi@souq.dev</a
+			target="_blank">hi@souq.dev</a
 		>
 	</section>
 </BaseLayout>
