--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap");
 
 @tailwind base;
 @tailwind components;
