--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,13 +9,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 		}
 	</style>
 	<section
-		class="
-			flex flex-col flex-grow
-			h-screen
-			items-center
-			justify-center
-			text-center
-		"
+		class="flex flex-col items-center justify-center flex-grow text-center h-screen"
 	>
 		<a
 			class="text-2xl tracking-wider"
