--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -127,6 +127,6 @@ const { title = "SouqRS", description = "High-performant e-commerce API" } =
 		<script
 			defer
 			type="module"
-			src={Astro.resolve('./../assets/js/firebase.js')}></script>
+			src={Astro.resolve("./../assets/js/firebase.js")}></script>
 	</body>
 </html>
