--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 		}
 	</style>
 	<section
-		class="flex flex-col items-center justify-center flex-grow text-center h-screen"
+		class="flex flex-col items-center justify-center flex-grow h-screen text-center"
 	>
 		<a
 			class="text-2xl tracking-wider"
