--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -25,6 +25,8 @@ const { title = "SouqRS", description = "High-performant e-commerce API" } =
 		<meta name="twitter:dnt" content="on" />
 
 		<!-- Links -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" crossorigin
+		/>
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			rel="manifest"
