--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -128,9 +128,9 @@ const { title = "SouqRS", description = "High-performant e-commerce API" } =
 	</head>
 	<body class="flex flex-grow">
 		<div id="souq-web" class="flex flex-grow">
-			<turbo-frame class="grow" id="slot" data-turbo-action="replace">
+			<div class="grow">
 				<slot />
-			</turbo-frame>
+			</div>
 		</div>
 	</body>
 </html>
