--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,5 +1,5 @@
 ---
-import "./../assets/css/base.css";
+import "./../styles/base.css";
 
 const { title = "SouqRS", description = "High-performant e-commerce API" } =
 	Astro.props;
@@ -41,7 +41,7 @@ const { title = "SouqRS", description = "High-performant e-commerce API" } =
 		/>
 
 		<style is:global>
-			@import "./../assets/css/global.css";
+			@import "./../styles/global.css";
 		</style>
 
 		<!-- Favicon -->
