--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,9 @@ import Base from "./../layouts/Base.astro";
 			class="text-2xl tracking-wider"
 			href="mailto:hi@souq.dev"
 			rel="noopener noreferrer"
-			target="_blank">hi@souq.dev</a
-		>
+			target="_blank"
+			>hi@souq.dev
+		</a>
 	</section>
 </Base>
 
