--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -27,7 +27,10 @@ const { title = "SouqRS", description = "High-performant e-commerce API" } =
 		<meta name="twitter:dnt" content="on" />
 
 		<!-- Links -->
-		<link rel="preconnect" href="https://fonts.googleapis.com" crossorigin
+		<link
+			rel="preconnect"
+			href="https://fonts.googleapis.com"
+			crossorigin
 		/>
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
