--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -129,7 +129,7 @@ const { title = "SouqRS", description = "High-performant e-commerce API" } =
 		/>
 	</head>
 
-	<body class="flex flex-grow">
+	<body>
 		<div id="souq-web" class="flex flex-grow">
 			<div class="grow">
 				<slot />
