--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -44,7 +44,7 @@ const { title = "SouqRS", description = "High-performant e-commerce API" } =
 		/>
 
 		<style is:global>
-			@import "./../styles/global.css";
+			@import "../styles/global.css";
 		</style>
 
 		<!-- Favicon -->
