--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,7 +11,9 @@ body {
 	@apply flex
 		flex-grow
 		antialiased
-		dark:bg-black dark:text-white sm:subpixel-antialiased;
+		dark:bg-black
+		dark:text-white
+		sm:subpixel-antialiased;
 }
 
 img {
