--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,5 +1,5 @@
 ---
-import "@styles/base.css";
+import "@styles/Base.css";
 
 const { title = "SouqRS", description = "High-performant e-commerce API" } =
 	Astro.props;
@@ -44,7 +44,7 @@ const { title = "SouqRS", description = "High-performant e-commerce API" } =
 		/>
 
 		<style is:global>
-			@import "@styles/global.css";
+			@import "@styles/Global.css";
 		</style>
 
 		<!-- Favicon -->
