--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -134,7 +134,7 @@ const { title = "SouqRS", description = "High-performant e-commerce API" } =
 				<slot />
 			</div>
 			<script>
-				import "@scripts/firebase";
+				import "@scripts/FIREBASE";
 			</script>
 		</div>
 	</body>
