--- a/Source/Layout/Base.astro
+++ b/Source/Layout/Base.astro
@@ -5,8 +5,8 @@ const { Title = "SouqRS", Description = "High-performant e-commerce API" } =
 	Astro.props;
 
 interface Props {
-	Title: string;
-	Description: string;
+	Title?: string;
+	Description?: string;
 }
 ---
 
