--- a/Source/pages/index.astro
+++ b/Source/pages/index.astro
@@ -7,10 +7,10 @@ import Base from "@Layout/Base.astro";
 		class="flex h-screen flex-grow flex-col items-center justify-center text-center">
 		<a
 			class="text-2xl tracking-wider"
-			href="mailto:souq@lightrix.help"
+			href="mailto:souq@nikolahristov.tech"
 			rel="noopener noreferrer"
 			target="_blank"
-			>souq@lightrix.help
+			>souq@nikolahristov.tech
 		</a>
 	</section>
 </Base>
